@@ -1,3 +1,7 @@
+2007-04-13 Yen-Ju Chen <yjchenx at gmail>
+
+	* Add trash can icon.
+
 2007-03-17 Yen-Ju Chen <yjchenx at gmail>
 
 	* Initial import.
